# Baize_H1

./: README.md  调试过程.docx
1.3D model/SolidworksModelDH/: ArduinoMega.stp.SLDPRT  Assembly - Body-14.stp.SLDPRT  Assembly - Body-6.stp.SLDPRT  Assembly - Body-8.SLDPRT  Assembly - Body-9.stp.SLDPRT  Assembly1.sldasm  Battery Straps.sldasm  Bearing Center.stp.SLDPRT  Blunt #2 0.25.stp.SLDPRT  Bottom Plate Hardware 3.sldasm  Femur Bracket_10-39.stp.SLDPRT  Femur Bracket_10-40.stp.SLDPRT  Femur Bracket_11-42.stp.SLDPRT  Femur Bracket_2-15.stp.SLDPRT  Femur Bracket_3-18.stp.SLDPRT  Femur Bracket_4-21.stp.SLDPRT  Femur Bracket_5-23.stp.SLDPRT  Femur Bracket_5-24.stp.SLDPRT  Femur Bracket_6-27.stp.SLDPRT  Femur Bracket_8-33.stp.SLDPRT  Femur Bracket_9-35.stp.SLDPRT  Femur Bracket_9-36.stp.SLDPRT  LIUZU_00.SLDASM  Receiver.stp.SLDPRT  SBEC Holder.stp.SLDPRT  Switch.stp.SLDPRT  Tibia Bracket_1-19.stp.SLDPRT  Tibia Bracket_2-26.stp.SLDPRT  Tibia Bracket_3-31.stp.SLDPRT  Tibia Bracket_3-32.stp.SLDPRT  Tibia Bracket_4-37.stp.SLDPRT  Tibia Bracket_4-38.stp.SLDPRT  Tibia Bracket_5-44.stp.SLDPRT  Wire Guide.stp.SLDPRT  moduan.SLDPRT
1.3D model/SolidworksModelOrigin/: 099990987____.sldprt  ASSY_DUMMY___.sldprt  ASSY_GEAR-WHEEL___DUMMY.sldprt  AX-18F.sldasm  AX-18F_2.sldasm  AX-18F_3.sldasm  BHS_M2_6X8.sldprt  BPF-BU.sldprt  BPF-WA.sldprt  Body side plate.sldprt  Bottom body plate.sldprt  Coxa.sldasm  DC04_B01_HORN2_DUMMY.sldprt  DC04_B01_INSERT_M3.sldprt  DX124_SCREW-COVER___.sldprt  FP04-F1.sldprt  FP04-F2.sldprt  FP04-F3.sldprt  Femur.sldasm  Foot.sldprt  Hexapod.SLDASM  Horn.sldasm  Leg.sldasm  Rubber Foot.sldprt  Standoff.sldprt  Symrie099990987____.sldprt  SymrieASSY_DUMMY___.sldprt  SymrieASSY_GEAR-WHEEL___DUMMY.sldprt  SymrieAX-18F1.sldasm  SymrieBHS_M2_6X8.sldprt  SymrieCoxa.sldasm  SymrieDC04_B01_INSERT_M3.sldprt  SymrieDX124_SCREW-COVER___.sldprt  SymrieFP04-F3.sldprt  SymrieFemur.sldasm  SymrieLeg.sldasm  Sym閠rieAX-18F.sldasm  Sym閠rieAX-18F2.sldasm  Sym閠rieBPF-BU.sldprt  Sym閠rieBPF-WA.sldprt  (+31 more)
1.3D model/SolidworksModel_ROSDH/: 4-40 Nut.stp.SLDPRT  4-40 x 0.625.stp.SLDPRT  Assembly - Body-10.stp.SLDPRT  Assembly - Body-11.stp.SLDPRT  Assembly - Body-12.stp.SLDPRT  Assembly - Body-13.SLDPRT  Assembly - Body-7.SLDPRT  Assembly1_1.sldasm  Assembly1_2.sldasm  Assembly1_3.sldasm  Battery Strap.stp.SLDPRT  Femur Bracket_11-41.stp.SLDPRT  Femur Bracket_2-16.stp.SLDPRT  Femur Bracket_3-17.stp.SLDPRT  Femur Bracket_4-22.stp.SLDPRT  Femur Bracket_6-28.stp.SLDPRT  Femur Bracket_7-29.stp.SLDPRT  Femur Bracket_7-30.stp.SLDPRT  Femur Bracket_8-34.stp.SLDPRT  LIUZU.SLDASM  Mounting Hardware.sldasm  Receiver Holder.stp.SLDPRT  Servo Header.stp.SLDPRT  Servo MG996R.stp.SLDPRT  Tibia Assembly.stp.SLDPRT  Tibia Bracket_1-20.stp.SLDPRT  Tibia Bracket_2-25.stp.SLDPRT  Tibia Bracket_5-43.stp.SLDPRT  Top Plate Hardware.sldasm  Wire Guides.sldasm  part lists.txt  复件 Assembly1_4.sldasm  复件 Assembly1_5.sldasm  复件 Servo Mount.sldprt
3.Software/LIUZU/: package.xml
3.Software/LIUZU/launch/: display.launch  liuzu.launch
3.Software/LIUZU/scripts/: serial_demo.py  teleop_demo.py
3.Software/LIUZU/src/: control_pig.cpp  liuzu.cpp
3.Software/LIUZU/urdf/: LIUZU.urdf
3.Software/ROS package/LIUZU/: CMakeLists.txt
3.Software/ROS package/LIUZU/config/: joint_names_LIUZU.yaml
3.Software/ROS package/LIUZU/launch/: gazebo.launch
3.Software/ROS package/LIUZU/scripts/: listener_p.py  talker_p.py
3.Software/ROS package/LIUZU/urdf/: LIUZU.csv
Hexapod+Robot/: LICENSE.txt  README.txt
Hexapod+Robot/files/: 12_Femur_Bracket_End_Cap.stl  18_Servo_Bearing_Center.stl  6_Tibia_Base_Plate.stl  6_Tibia_Bracket_End_Cap.stl  6_Tibia_Foot_Bumper.stl  6_Tibia_Foot_Plate.stl  Hexapod.ino  PS2_Controller_Test.ino  (+4 more)
(+11 files in other folders)
