<package format="2">
  <name>LIUZU</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for LIUZU</p>
    <p>This package contains configuration data, 3D models and launch files
for LIUZU robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>

  <build_depend>serial</build_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>serial</exec_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>urdf</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>trac_ik_lib</depend>
  <depend>boost</depend>
  <depend>roslaunch</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
